@@ -1,3 +1,8 @@
+Mon Mar 22 14:16:48 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htmerge/words.cc: Fix to prevent description text words from
+	clobbering anchor number of merged anchor text words.
+
 Fri Mar 19 17:09:21 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdig/HTML.cc: Fix bug where noindex_start was empty, allow case
